[ClearMine] 使用数据生成程序菜单
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@185 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -34,6 +34,8 @@
     <s:String x:Key="ExitMenuHeader">E_xit</s:String>
     <s:String x:Key="ToolsMenuHeader">_Tools</s:String>
     <s:String x:Key="ThemeMenuHeader">_Appearance</s:String>
+    <s:String x:Key="ClassicThemeMenuHeader">_Windows Classic</s:String>
+    <s:String x:Key="LinuxThemeMenuHeader">Linu_x</s:String>
     <s:String x:Key="CustomThemeMenuHeader">_Custom...</s:String>
     <s:String x:Key="LanguageMenuHeader">Lan_guage</s:String>
     <s:String x:Key="EnglishMenuItemHeader">_English</s:String>
