--- a/ClearMine.Themes/Themes/generic.xaml
+++ b/ClearMine.Themes/Themes/generic.xaml
@@ -1,12 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:v="clr-namespace:ClearMine.VM;assembly=ClearMine.VM"
-                    xmlns:m="clr-namespace:ClearMine.Framework.Commands;assembly=ClearMine.Framework"
                     xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework"
-                    xmlns:logic="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition">
+                    xmlns:logic="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition"
+                    xmlns:m="clr-namespace:ClearMine.GameDefinition.Commands;assembly=ClearMine.GameDefinition">
     <SolidColorBrush x:Key="DialogBackground" Color="#F0F0F0" />
     <PlaygroundBorderThicknessConverter x:Key="PlaygroundBorderThicknessConverter" />
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    
+    <!--<DataTemplate DataType="{x:Type d:MenuItemData}">
+        <MenuItem Header="{Binding HeaderKey}"
+                  ItemsSource="{Binding SubMenus}"
+                  Command="{Binding Command}"
+                  CommandParameter="{Binding CommandParameter}" />
+    </DataTemplate>
+    
+    <DataTemplate DataType="{x:Type d:MenuSeperatorData}">
+        <Separator />
+    </DataTemplate>-->
 
     <DataTemplate DataType="{x:Type logic:MineCell}">
         <MineCellControl />
@@ -278,6 +289,24 @@
                 <Setter Property="TextDecorations"
                         Value="Underline" />
             </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="GeneratedMenuStyle" TargetType="{x:Type MenuItem}">
+        <Setter Property="Header" Value="{BindableDynamicResource {Binding HeaderKey}}"/>
+        <Setter Property="Command" Value="{Binding Command}"/>
+        <Setter Property="ItemsSource" Value="{Binding SubMenus}"/>
+        <Setter Property="CommandParameter" Value="{Binding CommandParameter}"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding IsSeperator}" Value="True">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type MenuItem}">
+                            <Separator Style="{DynamicResource {x:Static MenuItem.SeparatorStyleKey}}" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
         </Style.Triggers>
     </Style>
 
