[ClearMine] 1. 使用VM的方式实现主菜单的所有功能。移除AutoCheckMenuItemsBehavior             2. 消息监听实现优先级机制
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@186 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Themes/generic.xaml
+++ b/ClearMine.Themes/Themes/generic.xaml
@@ -7,17 +7,6 @@
     <SolidColorBrush x:Key="DialogBackground" Color="#F0F0F0" />
     <PlaygroundBorderThicknessConverter x:Key="PlaygroundBorderThicknessConverter" />
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-    
-    <!--<DataTemplate DataType="{x:Type d:MenuItemData}">
-        <MenuItem Header="{Binding HeaderKey}"
-                  ItemsSource="{Binding SubMenus}"
-                  Command="{Binding Command}"
-                  CommandParameter="{Binding CommandParameter}" />
-    </DataTemplate>
-    
-    <DataTemplate DataType="{x:Type d:MenuSeperatorData}">
-        <Separator />
-    </DataTemplate>-->
 
     <DataTemplate DataType="{x:Type logic:MineCell}">
         <MineCellControl />
@@ -293,9 +282,11 @@
     </Style>
 
     <Style x:Key="GeneratedMenuStyle" TargetType="{x:Type MenuItem}">
-        <Setter Property="Header" Value="{BindableDynamicResource {Binding HeaderKey}}"/>
+        <Setter Property="DataContext" Value="{Binding}" />
+        <Setter Property="Header" Value="{Binding Header}"/>
         <Setter Property="Command" Value="{Binding Command}"/>
         <Setter Property="ItemsSource" Value="{Binding SubMenus}"/>
+        <Setter Property="IsChecked" Value="{Binding IsChecked}" />
         <Setter Property="CommandParameter" Value="{Binding CommandParameter}"/>
         <Style.Triggers>
             <DataTrigger Binding="{Binding IsSeperator}" Value="True">
