[ClearMine] 1. 保存自定义语言和主题的路径              2. 修正语言切换到自定义后程序无法再次启动的问题              3. 修正语言切换到自定义后插件的语言无法正确加载的问题
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@187 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -179,4 +179,6 @@
     <s:String x:Key="CannotFoundResourceKey">Cannot find resouce by key: {0}</s:String>
     <s:String x:Key="CannotFoundProperty">Cannot find property {1} in class {0}</s:String>
     <s:String x:Key="MediaFilePlayedInfo">Played media file: {0}</s:String>
+    <s:String x:Key="PluginOptionsTypeInvalid">The type of the plugin options should be DataMap</s:String>
+    <s:String x:Key="InvalidPluginOptionId">The option {1} of plugin {0} is not initialized yet.</s:String>
 </ResourceDictionary>
