[ClearMine] Fix Warnings and enable code analyze.               Fix a bug that application cannot load when the custom language file not exists.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@189 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Themes/generic.xaml
+++ b/ClearMine.Themes/Themes/generic.xaml
@@ -289,7 +289,7 @@
         <Setter Property="IsChecked" Value="{Binding IsChecked}" />
         <Setter Property="CommandParameter" Value="{Binding CommandParameter}"/>
         <Style.Triggers>
-            <DataTrigger Binding="{Binding IsSeperator}" Value="True">
+            <DataTrigger Binding="{Binding IsSeparator}" Value="True">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type MenuItem}">
