--- a/ClearMine.Dialogs/StatisticsWindow.xaml
+++ b/ClearMine.Dialogs/StatisticsWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ClearMine.UI.Dialogs.StatisticsWindow" x:ClassModifier="internal" x:Name="root"
         xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework"
         xmlns:h="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
-        xmlns:c="clr-namespace:ClearMine.GameDefinition.Commands;assembly=ClearMine.GameDefinition"
+        xmlns:c="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         h:CommandsHelper.LoadBindingsFromVM="True"
@@ -60,7 +60,7 @@
         <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
             <Button Content="{DynamicResource ResetButtonLabel}"
                     CommandParameter="{Binding HistoryList}"
-                    Command="{x:Static c:StatisticsCommands.Reset}" />
+                    Command="{x:Static c:GameCommands.Reset}" />
             <Button Content="{DynamicResource OKButtonLabel}"
                     IsDefault="True"
                     IsCancel="True"
