[ClearMine] 检查Design Time
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@191 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Properties/DesignTimeResources.xaml
+++ b/ClearMine.Themes/Properties/DesignTimeResources.xaml
@@ -2,5 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ClearMine.Themes;component/Themes/generic.xaml"/>
+        <ResourceDictionary Source="/ClearMine.Framework;component/Themes/Generic.xaml"/>
+        <ResourceDictionary Source="/ClearMine.Localization;component/en-US/Overall.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
