--- a/ClearMine.Themes/Themes/generic.xaml
+++ b/ClearMine.Themes/Themes/generic.xaml
@@ -528,6 +528,8 @@
         <Setter Property="UseLayoutRounding" Value="True" />
         <Setter Property="TextOptions.TextFormattingMode" Value="Display" />
         <Setter Property="Content" Value="{Binding}" />
+        <Setter Property="Width" Value="{Binding Width, Mode=TwoWay}" />
+        <Setter Property="ResizeMode" Value="CanResize" />
         <Setter Property="Title" Value="{DynamicResource ApplicationTitle}" />
         <!-- ContentTemplate is applied in a static way by default. -->
         <Setter Property="ContentTemplate" Value="{DynamicResource {x:Type v:ClearMineViewModel}}" />
