[ClearMine] 修正一些本地化逻辑
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@194 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -47,6 +47,8 @@
     <s:String x:Key="ViewHelpMenuItemHeader">_View Help</s:String>
     <s:String x:Key="SendFeedbakMenuItemHeader">Send _Feedback...</s:String>
     <s:String x:Key="AboutMenuItemHeader">_About</s:String>
+    <s:String x:Key="FlagsLabel">Flags: </s:String>
+    <s:String x:Key="TimesLabel">Time: </s:String>
     <s:String x:Key="AskingSaveGameMessage">Do you want to save the game?</s:String>
     <s:String x:Key="AskingSaveGameTitle">Clear Mine - Save</s:String>
     <s:String x:Key="ClearMineFeedbackTitle">Clear Mine Player Feedback</s:String>
