[ClearMine] 为各种Dialog定义枚举，并以之为参数弹出框。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@196 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/OptionsDialog.xaml
+++ b/ClearMine.Dialogs/OptionsDialog.xaml
@@ -1,10 +1,9 @@
-﻿<Window x:Class="ClearMine.UI.Dialogs.OptionsDialog" x:ClassModifier="internal"
+﻿<Window x:Class="ClearMine.Dialogs.OptionsDialog" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:ClearMine.Framework.Converters;assembly=ClearMine.Framework"
         xmlns:h="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
         xmlns:m="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition"
-        xmlns:d="clr-namespace:ClearMine.UI.Dialogs"
         h:CommandsHelper.LoadBindingsFromVM="True"
         Background="{StaticResource DialogBackground}"
         TextOptions.TextFormattingMode="Display"
