--- a/ClearMine.Dialogs/GameLostWindow.xaml
+++ b/ClearMine.Dialogs/GameLostWindow.xaml
@@ -1,4 +1,4 @@
-﻿<OptionDialog x:Class="ClearMine.UI.Dialogs.GameLostWindow" x:ClassModifier="internal"
+﻿<OptionDialog x:Class="ClearMine.Dialogs.GameLostWindow" x:ClassModifier="internal"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               WindowStartupLocation="CenterOwner"
